# praktika_9_1

./: .gitmodules  CMakeLists.txt  README.md  praktika_9_1.cpp  praktika_9_1.h
src/: main.cpp
src/calculators/: combinatorics.cpp  combinatorics.h  common_fractions.cpp  common_fractions.h  functions.cpp  functions.h  matrix.cpp  matrix.h  polynomial.cpp  polynomial.h  probability_and_stats.cpp  probability_and_stats.h
src/common/: menu.cpp  menu.h
